fixed for using only username and password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.http.multipart.max-request-size=1280000000KB
 #spring.datasource.url=jdbc:postgresql://localhost:5432/mjff_v1_0
 
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/mjff_v1_0
+spring.datasource.url=jdbc:postgresql://localhost:5432/mjff_v1_0
 spring.datasource.username=mdsgene
 spring.datasource.password=f4HajYBN
 
